Fixes z-index issue that was making items on the front page unclickable.

--- a/src/sass/partials/_index_page_preload.scss
+++ b/src/sass/partials/_index_page_preload.scss
@@ -1,5 +1,5 @@
 .main {
-	z-index:-1;
+	z-index:0;
 }
 .nav-fixed-bar--display {
 	display:flex;
